# robot-kinematics

./: CMakeLists.txt  README.md
assets/: MainScene.ttt  api.lua
lib/: ForceSensor.cpp  Motor.cpp  Object.cpp  VREPClient.cpp  spline.h
src/: main.cpp  main.hpp
